--- a/build.gradle
+++ b/build.gradle
@@ -4,8 +4,8 @@ apply from: 'idea.gradle'
 //apply plugin: 'checkstyle'
 
 // --- properties ---
-ext.ideaInstallationPath = 'C:/Users/Michal/AppData/Local/JetBrains/Toolbox/apps/IDEA-C/ch-0/171.4249.39'
-ext.ideaJdk = 'IntelliJ IDEA Community Edition IC-171.4249.39'
+ext.ideaInstallationPath = '/home/slava/Документы/idea-IU-171.4694.70/'
+ext.ideaJdk = 'IntelliJ IDEA Community Edition IC-171.4694.70'
 sourceCompatibility = 1.8
 // --- properties ---
 
@@ -27,7 +27,7 @@ dependencies {
 
 jar {
     metaInf {
-        from('/META-INF') {
+        from('./META-INF') {
             include 'plugin.xml'
         }
     }
