--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     testCompile 'org.mockito:mockito-core:2.0.3-beta'
     testCompile 'org.assertj:assertj-core:1.7.1'
     testCompile 'org.springframework:spring-test:4.0.0.RELEASE'
+    compileOnly("org.projectlombok:lombok:1.16.16")
+    testCompileOnly("org.projectlombok:lombok:1.16.16")
 }
 
 jar {
